# idk_build

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_deps.sh  cmakelibs.cmake
script/: env.sh  glslc.sh  pull_all.sh  push_all.sh  shader_funcs.sh
